# game-base

./: CMakeLists.txt  README.md
Engine/: CMakeLists.txt
Engine/include/Utils/: Log.h
Engine/src/Utils/: Log.cpp
Game/: CMakeLists.txt
Game/src/: Main.cpp
cmake/: dependencies.cmake
